--- a/english.html
+++ b/english.html
@@ -971,6 +971,8 @@ Error message and password prompt
 
 <li>Raziel and Rafael</li>
 
+<li>Ready made delicatessen</li>
+
 <li>Rear Window</li>
 
 <li>Recipes</li>
@@ -1032,6 +1034,8 @@ Error message and password prompt
 <li>Shalom</li>
 
 <li>Shalom Hanoch</li>
+
+<li>Shay Tra Litman</li>
 
 <li>Shoretzky</li>
 
@@ -1172,6 +1176,8 @@ Error message and password prompt
 <li>The relief is down the road</li>
 
 <li>The right hand doesn't know</li>
+
+<li>The roof in Huberman st.</li>
 
 <li>The Sailor</li>
 
@@ -9217,7 +9223,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200910133513925" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20201012122931772" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20210630180530515" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9226,7 +9232,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Flowers in the kitchen]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Shay Tra Litman]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9246,7 +9252,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20210522134549232" title="$:/temp/search">
+<div created="20161023184814872" modified="20210630180425340" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11528,7 +11534,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20210629173158022" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20210630180225756" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -13364,13 +13370,13 @@ The model is taken from [[Springfield|https://en.wikipedia.org/wiki/Springfield_
 
 </pre>
 </div>
-<div created="20200219173118907" modified="20201012123343335" tags="[[Coen sister]]" title="Mark">
+<div created="20200219173118907" modified="20210630180524880" tags="[[Coen sister]]" title="Mark">
 <pre>[img[pictures/mark1.jpg]]
 
 
 !!![[Gura]]:
 
-Mark is the manliest of the men, he is the Hungarian husband of [[Soni]]a the Hungarian, and he's a computer programmer, who fulfilled his duties by making a proper exit.
+Mark is the manliest of the men, he is the Hungarian husband of [[Sonia]], and he's a computer programmer, who fulfilled his duties by making a proper exit.
 
 
 
@@ -14613,6 +14619,15 @@ In the back part of the blue innocent looking warehouse on the left side of the 
 
  &lt;&lt;heblink [[רזיאל ורפאל]]&gt;&gt;</pre>
 </div>
+<div created="20210630154758774" modified="20210630155020909" tags="[[Food addicts]] Kitchens [[The kitchen by Genevieve]] Restaurants Cafés [[Corona beings]] Meals" title="Ready made delicatessen">
+<pre>
+[img[pictures/readymadedelicatessen.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[דליקטסן מן המוכן]]&gt;&gt;</pre>
+</div>
 <div created="20200215213829151" modified="20200910132557305" tags="[[Here in the Ghetto]] Films [[True stories]] Windows Trees" title="Rear Window">
 <pre>[img[pictures/rear-window.jpg]]
 
@@ -14972,6 +14987,19 @@ For instance:
 
  &lt;&lt;heblink [[שלום חנוך]]&gt;&gt;
 </pre>
+</div>
+<div created="20210630175148023" modified="20210630180357432" tags="Music [[Here in the Ghetto]] [[Outer sisters]]" title="Shay Tra Litman">
+<pre>
+[img[pictures/shay-tra-litman.jpg]]
+
+
+!!![[Tomer]]:
+
+Shay Tra Litman is [[a fine young lad|https://www.youtube.com/watch?v=_awp-5mjewA]], a teenage [[artisan|https://www.youtube.com/watch?v=yGlQ5xUyx_g]], he's [[strongly weak|https://www.youtube.com/watch?v=g2VEAqm_8cU]], he's [[talented and smart|https://www.youtube.com/watch?v=5QhE_JMvrDg]], he writes, sings and moves with perfect timing, [[he's got a deathly charisma|https://www.youtube.com/watch?v=J1aTFmOlYE4]], he's [[Shay Tra Litman|https://www.youtube.com/watch?v=VzN8mh8P3M4]], the world's beloved.
+
+
+
+ &lt;&lt;heblink [[שי טרא ליטמן]]&gt;&gt;</pre>
 </div>
 <div created="20200217142305955" modified="20200502113325291" tags="[[Here in the Ghetto]] [[Food addicts]] Families Bread" title="Shoretzky">
 <pre>[img[pictures/shorezky.jpg]]
@@ -16006,6 +16034,13 @@ When [[the dod|https://zzzen.com/]], that have some things to say, reached us, t
 
  &lt;&lt;heblink [[יד ימין אינה יודעת]]&gt;&gt;
 </pre>
+</div>
+<div created="20210630155527956" modified="20210630163205657" tags="[[Here in the Ghetto]] [[On the road to somewhere]] Metafiction [[True stories]] Closers" title="The roof in Huberman st.">
+<pre>
+[img[pictures/hubermanst.jpg]]
+
+
+ &lt;&lt;heblink [[הגג ברחוב הוברמן]]&gt;&gt;</pre>
 </div>
 <div created="20200627161353971" modified="20200716160028890" tags="HH" title="The Sailor">
 <pre>[img[pictures/thesailor.jpg]]
