--- a/index.html
+++ b/index.html
@@ -563,6 +563,8 @@ Error message and password prompt
 
 <li>דליקטסן אצל ז'נבייב</li>
 
+<li>דליקטסן מן המוכן</li>
+
 <li>דם אמיתי</li>
 
 <li>דןדן</li>
@@ -602,6 +604,8 @@ Error message and password prompt
 <li>הבריסטות שכאן</li>
 
 <li>הברמנית</li>
+
+<li>הגג ברחוב הוברמן</li>
 
 <li>הגוף מתעדכן</li>
 
@@ -9307,7 +9311,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20210430202203122" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20210513182052833" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20210630165258922" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9316,7 +9320,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[פרחים במטבח]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[שי טרא ליטמן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9336,7 +9340,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20210522134224964" title="$:/temp/search">
+<div created="20161023184814872" modified="20210630175032127" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10778,7 +10782,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20210629173402743" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20210630180716170" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -12413,6 +12417,15 @@ different tastes, but there were things we both love: family, work, people in al
 
 &lt;&lt;englink [[Delicatessen Chez Genevieve]]&gt;&gt;</pre>
 </div>
+<div created="20210630154608951" modified="20210630175000980" tags="מסעדות [[חיות אוכל]] [[המטבח על פי ז'נבייב]] מטבחים ארוחות [[הלכות קורונה]] הלכו" title="דליקטסן מן המוכן">
+<pre>[img[pictures/readymadedelicatessen.jpg]]
+
+!!![[יויו]]:
+
+[[דליקטסן אצל ז'נבייב]] הקדים את זמנו, במובן הזה, שכבר הפכנו למעדנייה ממנה אפשר לקחת מן המוכן מזון ומשקאות, ולצאת אל הטבע העירוני ולאכול בנחת וללא מסכות עוד לפני פרוץ קוביד 19. 
+
+&lt;&lt;englink [[Ready made delicatessen]]&gt;&gt;</pre>
+</div>
 <div created="20180307125005127" modified="20200216161204508" tags="סדרות [[חיות אוכל]] טלוויזיה [[כמה שירים כבר אפשר להמציא בכלל]]" title="דם אמיתי">
 <pre>[img[pictures/true-blood.jpg]]
 
@@ -12730,6 +12743,21 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 בעלת טנדר פורד ירוק וישן. (מכונה הקטנה)
 
 &lt;&lt;englink [[The bartender]]&gt;&gt;</pre>
+</div>
+<div created="20210630155322192" modified="20210630174559067" tags="[[כאן בגטו]] [[בדרך לאן שהוא]] [[מטא בדיון]] סגירים [[סיפורים אמיתיים]]" title="הגג ברחוב הוברמן">
+<pre>
+[img[pictures/hubermanst.jpg]]
+
+!!![[אירי]]:
+
+כמה כיף בגטו של [[תומר]] אליו באתי לביקור. יצאתי איתו ועם [[אימא של ג'אז]] לסיבוב, וראיתי את הגג [[מהמסיבה ההיא|מחפשת את אירי]]. ביקרנו גם את [[דליה, המורה לאלכסנדר|החדר של דליה]] ועוד ועוד ועוד והייתי ועודני שורקת בגיל.
+
+
+
+&lt;&lt;englink [[The roof in Huberman st.]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20171005203600150" modified="20200330161940807" tags="[[אירי טוענת]] [[קופים ממונעים]] [[בדרך לאן שהוא]] סגירים [[כפות ידיים]]" title="הגוף מתעדכן">
 <pre>[img[pictures/haguf-mitadken.jpg]]
@@ -19421,12 +19449,16 @@ Fapina''
 
 </pre>
 </div>
-<div created="20210629172953953" modified="20210629173423996" tags="מטבחים בתים [[כאן בגטו]]" title="פרחים במטבח">
+<div created="20210629172953953" modified="20210630163957884" tags="מטבחים בתים [[כאן בגטו]]" title="פרחים במטבח">
 <pre>
 [img[pictures/flowersinthekitchen.jpg]]
 
 
 &lt;&lt;englink [[Flowers in the kitchen]]&gt;&gt;
+
+!!![[אימא של ג'אז]]:
+
+פרחים במטבח, ציורים של אילה ברקע, כל השאר ועוד יותר ברקע חתיכת שמיים.
 
 </pre>
 </div>
@@ -20610,13 +20642,17 @@ Fapina''
 &lt;&lt;englink [[Drinking with Gura]]&gt;&gt;
 </pre>
 </div>
-<div created="20180826195804165" modified="20180828145142414" tags="[[אחיות חוץ]] מוזיקה" title="שי טרא ליטמן">
+<div created="20180826195804165" modified="20210630180804983" tags="[[אחיות חוץ]] מוזיקה [[כאן בגטו]]" title="שי טרא ליטמן">
 <pre>[img[pictures/shay-tra-litman.jpg]]
 
 
 !!![[תומר]]:
 
-שי טרא ליטמן הוא [[עלם חמודות|https://www.youtube.com/watch?v=_awp-5mjewA]], הוא [[נער אומן|https://www.youtube.com/watch?v=krTGi51osmI]], הוא [[חזק בחלשותו|https://www.youtube.com/watch?v=g2VEAqm_8cU]], הוא [[כשרוני וחכם|https://www.youtube.com/watch?v=5QhE_JMvrDg]], כותב שר ומתנועע עם טיימינג מושלם, הוא [[קטלן בכריזמה|https://www.youtube.com/watch?v=J1aTFmOlYE4]], הוא שי טרא ליטמן אהוב עולם.</pre>
+שי טרא ליטמן הוא [[עלם חמודות|https://www.youtube.com/watch?v=_awp-5mjewA]], הוא [[נער אומן|https://www.youtube.com/watch?v=yGlQ5xUyx_g]], הוא [[חזק בחלשותו|https://www.youtube.com/watch?v=g2VEAqm_8cU]], הוא [[כשרוני וחכם|https://www.youtube.com/watch?v=5QhE_JMvrDg]], כותב שר ומתנועע עם טיימינג מושלם, הוא [[קטלן בכריזמה|https://www.youtube.com/watch?v=J1aTFmOlYE4]], הוא [[שי טרא ליטמן|https://www.youtube.com/watch?v=VzN8mh8P3M4]] שחביב על העולם.
+
+
+&lt;&lt;englink [[Shay Tra Litman]]&gt;&gt;
+</pre>
 </div>
 <div created="20180726193443645" modified="20200217202254414" tags="[[כאן בגטו]] קפה [[בתי קפה]]" title="שיח קפה">
 <pre>[img[pictures/siach-cafe.jpg]]
