--- a/index.html
+++ b/index.html
@@ -1057,6 +1057,8 @@ Error message and password prompt
 
 <li>מטא בדיון</li>
 
+<li>מטבח משנות ה-70 שטרי שרויאר צילמה</li>
+
 <li>מטבח צבעוני</li>
 
 <li>מטבחים</li>
@@ -9320,7 +9322,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[שי טרא ליטמן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מטבח משנות ה-70 שטרי שרויאר צילמה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9340,7 +9342,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20210630175032127" title="$:/temp/search">
+<div created="20161023184814872" modified="20210919155219732" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12745,8 +12747,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[The bartender]]&gt;&gt;</pre>
 </div>
 <div created="20210630155322192" modified="20210630174559067" tags="[[כאן בגטו]] [[בדרך לאן שהוא]] [[מטא בדיון]] סגירים [[סיפורים אמיתיים]]" title="הגג ברחוב הוברמן">
-<pre>
-[img[pictures/hubermanst.jpg]]
+<pre>[img[pictures/hubermanst.jpg]]
 
 !!![[אירי]]:
 
@@ -16646,6 +16647,17 @@ We rise to play a greater part.
 
 </pre>
 </div>
+<div created="20210919154543061" modified="20210919160740124" tags="מטבחים [[חיות אוכל]] [[מטא בדיון]] [[אחיות חוץ]]" title="מטבח משנות ה-70 שטרי שרויאר צילמה">
+<pre>
+[img[pictures/terry-schreuer.jpg]]
+
+[[גורה]]:
+
+את [[הצילום|https://www.instagram.com/p/CR_oeCmNYOb/]] של הציור הזה, ראיתי באינסטגרם ונהדפתי, כמו שקורה לי כשאני אוהבת משהו. זה צילום [[שטרי שרויאר|https://www.instagram.com/schreuer/?hl=en]] צילמה, ושכל הצילומים שלה יפים תמיד בעיני, ויותר מכך, מה ואיך שהיא בוחרת לצלם, הזוויות. אני אוהבת את העין הרכה והטובה שלה ואת החום שעובר. 
+
+כמה ימים אחרי שראיתי את הצילום הזה ראיתי עוד שניים שגרמו לי לרצות לצייר אותם, וכבר זהו, לא התאפקתי וכתבתי לטרי הודעה והחמאתי לה ובהמשך שאלתי אם תוכל לשלוח לי צילום כך שאוכל לצייר בנוחות. היא שמחה מאד ובטח ששלחה וציירתי ביראה ועכשיו הוא כאן.
+</pre>
+</div>
 <div created="20210209185022754" modified="20210209190238074" tags="מטבחים בתים [[הלכות קורונה]] [[חיות אוכל]]" title="מטבח צבעוני">
 <pre>[img[pictures/colorfulkitchen.jpg]]
 
@@ -19450,8 +19462,7 @@ Fapina''
 </pre>
 </div>
 <div created="20210629172953953" modified="20210630163957884" tags="מטבחים בתים [[כאן בגטו]]" title="פרחים במטבח">
-<pre>
-[img[pictures/flowersinthekitchen.jpg]]
+<pre>[img[pictures/flowersinthekitchen.jpg]]
 
 
 &lt;&lt;englink [[Flowers in the kitchen]]&gt;&gt;
