--- a/index.html
+++ b/index.html
@@ -10784,7 +10784,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20210630180716170" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20210919165417493" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16647,7 +16647,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20210919154543061" modified="20210919160740124" tags="מטבחים [[חיות אוכל]] [[מטא בדיון]] [[אחיות חוץ]]" title="מטבח משנות ה-70 שטרי שרויאר צילמה">
+<div created="20210919154543061" modified="20210919165452929" tags="מטבחים [[חיות אוכל]] [[מטא בדיון]] [[אחיות חוץ]]" title="מטבח משנות ה-70 שטרי שרויאר צילמה">
 <pre>
 [img[pictures/terry-schreuer.jpg]]
 
@@ -16656,6 +16656,9 @@ We rise to play a greater part.
 את [[הצילום|https://www.instagram.com/p/CR_oeCmNYOb/]] של הציור הזה, ראיתי באינסטגרם ונהדפתי, כמו שקורה לי כשאני אוהבת משהו. זה צילום [[שטרי שרויאר|https://www.instagram.com/schreuer/?hl=en]] צילמה, ושכל הצילומים שלה יפים תמיד בעיני, ויותר מכך, מה ואיך שהיא בוחרת לצלם, הזוויות. אני אוהבת את העין הרכה והטובה שלה ואת החום שעובר. 
 
 כמה ימים אחרי שראיתי את הצילום הזה ראיתי עוד שניים שגרמו לי לרצות לצייר אותם, וכבר זהו, לא התאפקתי וכתבתי לטרי הודעה והחמאתי לה ובהמשך שאלתי אם תוכל לשלוח לי צילום כך שאוכל לצייר בנוחות. היא שמחה מאד ובטח ששלחה וציירתי ביראה ועכשיו הוא כאן.
+
+
+&lt;&lt;englink [[A 70`s kitchen that Terry Schreuer took a picture of]]&gt;&gt;
 </pre>
 </div>
 <div created="20210209185022754" modified="20210209190238074" tags="מטבחים בתים [[הלכות קורונה]] [[חיות אוכל]]" title="מטבח צבעוני">
