--- a/english.html
+++ b/english.html
@@ -255,6 +255,8 @@ Error message and password prompt
 
 <li>9-side-wishing-star</li>
 
+<li>A 70`s kitchen that Terry Schreuer took a picture of</li>
+
 <li>A corpse of a bra in the sink</li>
 
 <li>A December`s night</li>
@@ -9232,7 +9234,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Shay Tra Litman]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[A 70`s kitchen that Terry Schreuer took a picture of]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9444,6 +9446,13 @@ coming soon as possible
 
 
  &lt;&lt;heblink [[כוכב המשאלות בעל תשע הצלעות]]&gt;&gt;</pre>
+</div>
+<div created="20210919164950533" modified="20210919165330066" tags="Kitchens [[Outer sisters]] Metafiction [[Food addicts]]" title="A 70`s kitchen that Terry Schreuer took a picture of">
+<pre>
+[img[pictures/terry-schreuer.jpg]]
+
+
+ &lt;&lt;heblink [[מטבח משנות ה-70 שטרי שרויאר צילמה]]&gt;&gt;</pre>
 </div>
 <div created="20200614141033935" modified="20200625131722223" tags="[[On the road to somewhere]] Metafiction [[When they sleep]] Houses" title="A corpse of a bra in the sink">
 <pre>[img[pictures/gviyashelhaziya.jpg]]
@@ -11534,7 +11543,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20210630180225756" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20210919165306486" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11571,7 +11580,6 @@ At the moment I saw sweet [[Angelic]] she looked beautiful to me, but I was sure
 </div>
 <div created="20210629173051973" modified="20210629173237261" tags="Kitchens Houses [[Here in the Ghetto]]" title="Flowers in the kitchen">
 <pre>
-
 [img[pictures/flowersinthekitchen.jpg]]
 
 
@@ -14620,8 +14628,7 @@ In the back part of the blue innocent looking warehouse on the left side of the 
  &lt;&lt;heblink [[רזיאל ורפאל]]&gt;&gt;</pre>
 </div>
 <div created="20210630154758774" modified="20210630155020909" tags="[[Food addicts]] Kitchens [[The kitchen by Genevieve]] Restaurants Cafés [[Corona beings]] Meals" title="Ready made delicatessen">
-<pre>
-[img[pictures/readymadedelicatessen.jpg]]
+<pre>[img[pictures/readymadedelicatessen.jpg]]
 
 
 
@@ -14989,8 +14996,7 @@ For instance:
 </pre>
 </div>
 <div created="20210630175148023" modified="20210630180357432" tags="Music [[Here in the Ghetto]] [[Outer sisters]]" title="Shay Tra Litman">
-<pre>
-[img[pictures/shay-tra-litman.jpg]]
+<pre>[img[pictures/shay-tra-litman.jpg]]
 
 
 !!![[Tomer]]:
@@ -16036,8 +16042,7 @@ When [[the dod|https://zzzen.com/]], that have some things to say, reached us, t
 </pre>
 </div>
 <div created="20210630155527956" modified="20210630163205657" tags="[[Here in the Ghetto]] [[On the road to somewhere]] Metafiction [[True stories]] Closers" title="The roof in Huberman st.">
-<pre>
-[img[pictures/hubermanst.jpg]]
+<pre>[img[pictures/hubermanst.jpg]]
 
 
  &lt;&lt;heblink [[הגג ברחוב הוברמן]]&gt;&gt;</pre>
