--- a/english.html
+++ b/english.html
@@ -869,6 +869,8 @@ Error message and password prompt
 
 <li>Nano and I</li>
 
+<li>Nano feature</li>
+
 <li>Necks</li>
 
 <li>Nectarine pie</li>
@@ -9234,7 +9236,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[A 70`s kitchen that Terry Schreuer took a picture of]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Nano feature]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9448,8 +9450,7 @@ coming soon as possible
  &lt;&lt;heblink [[כוכב המשאלות בעל תשע הצלעות]]&gt;&gt;</pre>
 </div>
 <div created="20210919164950533" modified="20210919165330066" tags="Kitchens [[Outer sisters]] Metafiction [[Food addicts]]" title="A 70`s kitchen that Terry Schreuer took a picture of">
-<pre>
-[img[pictures/terry-schreuer.jpg]]
+<pre>[img[pictures/terry-schreuer.jpg]]
 
 
  &lt;&lt;heblink [[מטבח משנות ה-70 שטרי שרויאר צילמה]]&gt;&gt;</pre>
@@ -11543,7 +11544,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20210919165306486" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20211011093811604" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11579,8 +11580,7 @@ At the moment I saw sweet [[Angelic]] she looked beautiful to me, but I was sure
 </pre>
 </div>
 <div created="20210629173051973" modified="20210629173237261" tags="Kitchens Houses [[Here in the Ghetto]]" title="Flowers in the kitchen">
-<pre>
-[img[pictures/flowersinthekitchen.jpg]]
+<pre>[img[pictures/flowersinthekitchen.jpg]]
 
 
 
@@ -13811,6 +13811,17 @@ The older biologic sister of Gura and me.
 We celebrated the first birthday of my sweet Nano on November 1st at my parent's garden without mom Sheffi, who on the former night left and flew to America. I knew that she was supposed to go out with a friend for a hang that evening, and stay at her place for the night, but when I woke up in the morning an email had awaited for me, which she sent a moment before the take off. She wrote that she can't do it anymore. Almost three weeks have passed since then. I'm technically organized, but my heart aches for my little Nano who's looking for her mother.
 
  &lt;&lt;heblink [[ננו שלי ואני]]&gt;&gt;
+</pre>
+</div>
+<div created="20211011093428740" modified="20211011093834877" tags="Films Metafiction Houses [[TV Series]]" title="Nano feature">
+<pre>
+
+[img[pictures/nanofeature.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[ננו פיצ'ר]]&gt;&gt;
 </pre>
 </div>
 <div created="20200308094942361" modified="20200324190655145" tags="[[Iry claims]]" title="Necks">
