--- a/index.html
+++ b/index.html
@@ -1157,6 +1157,8 @@ Error message and password prompt
 
 <li>נטע</li>
 
+<li>ננו פיצ'ר</li>
+
 <li>ננו שלי ואני</li>
 
 <li>נסענו לאזכרה של אימא</li>
@@ -9322,7 +9324,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מטבח משנות ה-70 שטרי שרויאר צילמה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ננו פיצ'ר]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10784,7 +10786,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20210919165417493" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20211011093655298" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16648,8 +16650,7 @@ We rise to play a greater part.
 </pre>
 </div>
 <div created="20210919154543061" modified="20210919165452929" tags="מטבחים [[חיות אוכל]] [[מטא בדיון]] [[אחיות חוץ]]" title="מטבח משנות ה-70 שטרי שרויאר צילמה">
-<pre>
-[img[pictures/terry-schreuer.jpg]]
+<pre>[img[pictures/terry-schreuer.jpg]]
 
 [[גורה]]:
 
@@ -17461,6 +17462,18 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Neta]]&gt;&gt;
 </pre>
+</div>
+<div created="20211011093313989" modified="20211011095643716" tags="סרטים [[מטא בדיון]] בתים סדרות" title="ננו פיצ'ר">
+<pre>
+[img[pictures/nanofeature.jpg]]
+
+
+!!![[יויו]]:
+
+בשעה טובה [[לתומר|תומר]] ולי על פתיחת ננו פיצ'ר.
+
+
+&lt;&lt;englink [[Nano feature]]&gt;&gt;</pre>
 </div>
 <div created="20181118131210478" modified="20200426134950781" tags="[[כאן בגטו]] אימהות ילדים [[ילדים חד הוריים]] משפחות" title="ננו שלי ואני">
 <pre>[img[pictures/nano-ve-ani.jpg]]
