--- a/index.html
+++ b/index.html
@@ -877,6 +877,8 @@ Error message and password prompt
 
 <li>כולי עלמא</li>
 
+<li>כוסות מזארה הום</li>
+
 <li>כורתים עצים</li>
 
 <li>כירולוגיה פסיכודיאגנוסטית</li>
@@ -9324,7 +9326,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ננו פיצ'ר]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כוסות מזארה הום]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10786,7 +10788,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20211011093655298" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20211107164515421" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -15185,6 +15187,18 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Kuli Alma]]&gt;&gt;</pre>
 </div>
+<div created="20211107163730826" modified="20211107164913881" tags="מטבחים [[חיות אוכל]] [[בדרך לאן שהוא]]" title="כוסות מזארה הום">
+<pre>
+[img[pictures/glassesfromzarahome.jpg]]
+
+
+!!![[גורה]]:
+
+כבר כמה ימים שאני מהופנטת מהכוס עם הפרחים.
+
+
+&lt;&lt;englink [[Glasses from Zara Home]]&gt;&gt;</pre>
+</div>
 <div created="20170425180523126" modified="20200910134529402" tags="[[בחוות החיות]] עצים" title="כורתים עצים">
 <pre>[img[pictures/kortim-ezim.jpg]]
 
@@ -17464,8 +17478,7 @@ We rise to play a greater part.
 </pre>
 </div>
 <div created="20211011093313989" modified="20211011095643716" tags="סרטים [[מטא בדיון]] בתים סדרות" title="ננו פיצ'ר">
-<pre>
-[img[pictures/nanofeature.jpg]]
+<pre>[img[pictures/nanofeature.jpg]]
 
 
 !!![[יויו]]:
