--- a/english.html
+++ b/english.html
@@ -573,6 +573,8 @@ Error message and password prompt
 
 <li>Gili's kiosk</li>
 
+<li>Glasses from Zara Home</li>
+
 <li>Grape leaves</li>
 
 <li>Grasyani</li>
@@ -9236,7 +9238,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Nano feature]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Glasses from Zara Home]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11544,7 +11546,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20211011093811604" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20211107164418694" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11826,6 +11828,13 @@ I know wonderful Gili since the time when there was a branch of [[Reviva and Cel
 
 
  &lt;&lt;heblink [[הקיוסק של גילי]]&gt;&gt;</pre>
+</div>
+<div created="20211107164208509" modified="20211107164442867" tags="Kitchens [[Food addicts]] [[On the road to somewhere]]" title="Glasses from Zara Home">
+<pre>
+[img[pictures/glassesfromzarahome.jpg]]
+
+
+ &lt;&lt;heblink [[כוסות מזארה הום]]&gt;&gt;</pre>
 </div>
 <div created="20200417171759725" modified="20200417171947567" tags="Recipes [[Vegan recipes]] [[Food addicts]] [[Here in the Ghetto]] [[Corona beings]]" title="Grape leaves">
 <pre>[img[pictures/aley-gefen.jpg]]
@@ -13815,7 +13824,6 @@ We celebrated the first birthday of my sweet Nano on November 1st at my parent's
 </div>
 <div created="20211011093428740" modified="20211011093834877" tags="Films Metafiction Houses [[TV Series]]" title="Nano feature">
 <pre>
-
 [img[pictures/nanofeature.jpg]]
 
 
