--- a/english.html
+++ b/english.html
@@ -287,6 +287,8 @@ Error message and password prompt
 
 <li>Amalya</li>
 
+<li>American Utopia</li>
+
 <li>An open ending</li>
 
 <li>Angelic</li>
@@ -9238,7 +9240,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Glasses from Zara Home]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[American Utopia]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9703,6 +9705,13 @@ To place a (gloved) hand over her face, and twist.
 
  &lt;&lt;heblink [[עמליה]]&gt;&gt;
 </pre>
+</div>
+<div created="20211117145134137" modified="20211117145622160" tags="Music Films [[On the road to somewhere]] [[Outer sisters]]" title="American Utopia">
+<pre>
+[img[pictures/american-utopia.jpg]]
+
+
+ &lt;&lt;heblink [[American Utopia]]&gt;&gt;</pre>
 </div>
 <div created="20200215114358738" modified="20200725180848507" tags="[[The Sopranos]] TV [[TV Series]] [[On the road to somewhere]] Closers" title="An open ending">
 <pre>[img[pictures/sof-hasopranos.jpg]]
@@ -11546,7 +11555,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20211107164418694" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20211117145242762" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11830,8 +11839,7 @@ I know wonderful Gili since the time when there was a branch of [[Reviva and Cel
  &lt;&lt;heblink [[הקיוסק של גילי]]&gt;&gt;</pre>
 </div>
 <div created="20211107164208509" modified="20211107164442867" tags="Kitchens [[Food addicts]] [[On the road to somewhere]]" title="Glasses from Zara Home">
-<pre>
-[img[pictures/glassesfromzarahome.jpg]]
+<pre>[img[pictures/glassesfromzarahome.jpg]]
 
 
  &lt;&lt;heblink [[כוסות מזארה הום]]&gt;&gt;</pre>
@@ -13823,8 +13831,7 @@ We celebrated the first birthday of my sweet Nano on November 1st at my parent's
 </pre>
 </div>
 <div created="20211011093428740" modified="20211011093834877" tags="Films Metafiction Houses [[TV Series]]" title="Nano feature">
-<pre>
-[img[pictures/nanofeature.jpg]]
+<pre>[img[pictures/nanofeature.jpg]]
 
 
 
