--- a/english.html
+++ b/english.html
@@ -957,6 +957,8 @@ Error message and password prompt
 
 <li>Presence</li>
 
+<li>Preservation</li>
+
 <li>Pride here</li>
 
 <li>Prince</li>
@@ -9240,7 +9242,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[American Utopia]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Preservation [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9707,8 +9709,7 @@ To place a (gloved) hand over her face, and twist.
 </pre>
 </div>
 <div created="20211117145134137" modified="20211117145622160" tags="Music Films [[On the road to somewhere]] [[Outer sisters]]" title="American Utopia">
-<pre>
-[img[pictures/american-utopia.jpg]]
+<pre>[img[pictures/american-utopia.jpg]]
 
 
  &lt;&lt;heblink [[American Utopia]]&gt;&gt;</pre>
@@ -11555,7 +11556,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20211117145242762" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20211202200643615" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -14497,6 +14498,13 @@ At Independence day 5780 with easing and but also lockdown news, I dropped Nano 
 
 
 </pre>
+</div>
+<div created="20211202200548095" modified="20211202202832604" tags="Houses [[True stories]] Trees" title="Preservation">
+<pre>[img[pictures/preservation.jpg]]
+
+
+
+ &lt;&lt;heblink [[שימור]]&gt;&gt;</pre>
 </div>
 <div created="20200220153930451" modified="20200605134240062" tags="[[Here in the Ghetto]] Metafiction [[On the road to somewhere]] Cafés" title="Pride here">
 <pre>[img[pictures/pride.jpg]]
