--- a/index.html
+++ b/index.html
@@ -1421,6 +1421,8 @@ Error message and password prompt
 
 <li>שיטת אלכסנדר</li>
 
+<li>שימור</li>
+
 <li>שלום</li>
 
 <li>שלום חנוך</li>
@@ -9328,7 +9330,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[American Utopia]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="שימור [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10801,7 +10803,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20211117145345396" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20211202200816167" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -20739,6 +20741,15 @@ Fapina''
 &lt;&lt;englink [[Alexander Technique]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20211202200044000" modified="20211202203243796" tags="בתים [[סיפורים אמיתיים]] עצים" title="שימור">
+<pre>[img[pictures/preservation.jpg]]
+
+!!![[תומר]]:
+
+אחת לאיזה זמן מוגבל אני צועד מהיר ועצבני לכוון מתחם שרונה, לראות איך התקדמו ענייני הבינוי בתוך וסביב לרשות השידור מערכת תל-אביב ז&quot;ל.
+
+&lt;&lt;englink [[Preservation]]&gt;&gt;</pre>
 </div>
 <div created="20161024202738061" modified="20200322164056686" tags="HH" title="שלום">
 <pre>[img[pictures/shalom.jpg]]
