--- a/english.html
+++ b/english.html
@@ -905,6 +905,8 @@ Error message and password prompt
 
 <li>Orange soup</li>
 
+<li>Our beloved Stereo</li>
+
 <li>Our Father</li>
 
 <li>Our grandma</li>
@@ -9242,7 +9244,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Preservation [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11556,7 +11558,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20211202200643615" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20211207161752554" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -14080,6 +14082,14 @@ Method:
 
 
  &lt;&lt;heblink [[מרק כתום בסיר גדול]]&gt;&gt;</pre>
+</div>
+<div created="20211207161619894" modified="20211207184340475" tags="[[A friend]] Music Windows [[Sofa therapy]]" title="Our beloved Stereo">
+<pre>[img[pictures/belovedstereo.jpg]]
+
+
+
+ &lt;&lt;heblink [[הסטריאו האהוב שלנו]]&gt;&gt;
+</pre>
 </div>
 <div created="20200217171010937" modified="20200910132400578" tags="Families [[The estate where I grew up]] Trees" title="Our Father">
 <pre>[img[pictures/avinu.jpg]]
