--- a/index.html
+++ b/index.html
@@ -681,6 +681,8 @@ Error message and password prompt
 
 <li>הסופרנוס</li>
 
+<li>הסטריאו האהוב שלנו</li>
+
 <li>הסינים</li>
 
 <li>הסיפור על גורה</li>
@@ -9321,7 +9323,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20210430202203122" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20210630165258922" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20211207165816199" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9330,7 +9332,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="שימור [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10803,7 +10805,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20211202200816167" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20211207162136889" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -13354,6 +13356,17 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 </pre>
+</div>
+<div created="20211207161533913" modified="20211207184250521" tags="חבר מוזיקה חלונות [[טיפולים מהספה]]" title="הסטריאו האהוב שלנו">
+<pre>[img[pictures/belovedstereo.jpg]]
+
+!!![[תומר]]:
+
+ייתכן שאני יכול להגיד כרגע בלב שלם יחסית, שמצבי הולך ומשתפר. התחושה התעצמה לאחר שהכנסתי לפני יומיים לדירתנו שהייתה נטולת סטריאו זמן מה, זוג רמקולים AR11 ופטיפון Technics, שנרכשו [[בחוד המחט|https://www.instagram.com/hodhamahat/]]. רועי חיבר אותם למגבר שהיה כאן בארון כמה שנים, ואת התקליטורים אנחנו מעבירים דרך נגן DVD שהיה לנו גם. קימבנתי את הרהיטים מבעוד מועד. הצליל מקסים. צילמתי ושלחתי [[לגורה|גורה]] שציירה.
+
+
+
+&lt;&lt;englink [[Our beloved Stereo]]&gt;&gt;</pre>
 </div>
 <div created="20161112205825183" modified="20200426134116707" tags="[[אחות כהן]] משפחות" title="הסינים">
 <pre>[img[pictures/hasinim.jpg]]
