chocolate cakeone thought after

--- a/index.html
+++ b/index.html
@@ -1061,6 +1061,8 @@ Error message and password prompt
 
 <li>מחפשת את אירי</li>
 
+<li>מחשבה אחר מחשבה</li>
+
 <li>מטא בדיון</li>
 
 <li>מטבח משנות ה-70 שטרי שרויאר צילמה</li>
@@ -1244,6 +1246,8 @@ Error message and password prompt
 <li>עוגת סולת</li>
 
 <li>עוגת פרג שוקולד</li>
+
+<li>עוגת שוקולד</li>
 
 <li>עוגת שזיפים</li>
 
@@ -9323,7 +9327,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20210430202203122" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20211207165816199" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20211212202818770" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9332,7 +9336,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מחשבה אחר מחשבה]] [[עוגת שוקולד]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10805,7 +10809,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20211207162136889" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20211212203127295" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -16676,6 +16680,24 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Searching for Iry]]&gt;&gt;</pre>
 </div>
+<div created="20211212202434153" modified="20211212204846250" tags="אימהות אפייה בתים מטבחים [[בדרך לאן שהוא]] [[סיפורים אמיתיים]]" title="מחשבה אחר מחשבה">
+<pre>
+[img[pictures/onethoughtafteranother.jpg]]
+
+!!![[אימא של ג'אז]]:
+
+בזמן האחרון ניסיתי שוב ושוב לדמיין את המטבח של סבתא בריינה שלי, שהיה ברחוב ההדרים בפרדס-חנה, עד לרמת הפרטים הקטנים ביותר. אך מאחר שאינני זוכרת הכל, שיניתי את הדקורציה והשארתי את רוח הדברים.
+
+
+
+
+
+&lt;&lt;englink [[One thought ater another]]&gt;&gt;
+
+
+
+</pre>
+</div>
 <div created="20170918165813987" modified="20200531144048883" tags="[[סיפורים אמיתיים]] סרטים סגירים [[האנקי דורי]]" title="מטא בדיון">
 <pre>[img[pictures/meta-fiction.jpg]]
 
@@ -18430,6 +18452,51 @@ __אופן ההכנה:__
 
 
 &lt;&lt;englink [[Poppy seed chocolate cake]]&gt;&gt;</pre>
+</div>
+<div created="20211212200845263" modified="20211212204412371" tags="מתכונים אפייה [[חיות אוכל]] ארוחות" title="עוגת שוקולד">
+<pre>
+[img[pictures/chocolatecake.jpg]]
+
+
+!!![[אימא של ג'אז]]:
+ 
+
+
+החומרים :
+
+*מאתיים חמישים גרם חמאה או מרגרינה
+*מאתיים גרם שוקולד מריר
+*שלוש כפות קקאו
+*שלושת רבעי כוס חלב
+ *כוס סוכר אחת
+*מעט תמצית רום/קוניאק/ויסקי ( אם אוהבים )
+*חמש ביצים 
+*כוס ורבע קמח מנופה
+*כפית אבקת אפייה
+
+
+
+אופן ההכנה:
+
+1. ממיסים בסיר קטן את החמאה, השוקולד המריר, הקקאו והחלב תוך בחישה עד לקרם חלק, אליו מוסיפים את הרום/קוניאק/ויסקי. (אפשר להמיס  גם במיקרו)
+ 
+2. מקציפים את הביצים במערבל חשמלי ומוסיפים בהדרגה את הסוכר, ממשיכים לערבל במהירות גבוהה עד לקבלת תערובת תפוחה ובהירה.
+
+3. לתוך הביצים המוקצפות מוסיפים בעזררת מטרפה ידנית ולסירוגין את תערובת השוקולד ואת הקמח עד לתערובת אחידה.
+
+4.  מוזגים לתבנית מלבנית (30 על 25 למשל), או תבנית עגולה בקוטר 26. 
+
+5. מכניסים את העוגה למרכז התנור שחומם מראש ל165-170  מעלות צלזיוס , ואופים כשעה או עד שקיסם הננעץ במרכז העוגה יוצא יבש. 
+
+6. מכינים את הגאנאש - ממיסים את השמנת והשוקולד עד לתערובת אחידה ומבריקה.
+
+7. כשהעוגה יוצאת מן התנור מוזגים עליה בעדינות ומובה נמוך את הקרם, לו נותנים לחלחל פנימה עד שהעוגה מגיעה לטמפרטורת החדר.
+
+
+
+
+&lt;&lt;englink [[Chocolate cake]]&gt;&gt;
+</pre>
 </div>
 <div created="20170802173415690" modified="20200910093010269" tags="[[כשהם ישנים]] אפייה מתכונים" title="עוגת שזיפים">
 <pre>[img[pictures/ugat-shezifim.jpg]]
