--- a/english.html
+++ b/english.html
@@ -411,6 +411,8 @@ Error message and password prompt
 
 <li>Chinese pickles</li>
 
+<li>Chocolate cake</li>
+
 <li>Chocolate chip cookies</li>
 
 <li>Chocolate fudge</li>
@@ -898,6 +900,8 @@ Error message and password prompt
 <li>On the way to Sarona</li>
 
 <li>Once</li>
+
+<li>One thought ater another</li>
 
 <li>Opinionated</li>
 
@@ -9244,7 +9248,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[One thought ater another]] [[Chocolate cake]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10631,6 +10635,14 @@ Children and their rights are the most important, and who and what they'll be sh
 
 </pre>
 </div>
+<div created="20211212201029883" modified="20211212201159293" tags="Baking [[Food addicts]] Recipes" title="Chocolate cake">
+<pre>
+[img[pictures/chocolatecake.jpg]]
+
+
+
+ &lt;&lt;heblink [[עוגת שוקולד]]&gt;&gt;</pre>
+</div>
 <div created="20200217130014362" modified="20200217130146341" tags="Recipes Baking [[Food addicts]] [[The archive's trustees]] [[The Baumans]]" title="Chocolate chip cookies">
 <pre>[img[pictures/chocolate-chips.jpg]]
 
@@ -11558,7 +11570,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20211207161752554" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20211212203032271" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -14029,6 +14041,15 @@ It seemed like, everything is fine''
 
 
 </pre>
+</div>
+<div created="20211212202829463" modified="20211212203057109" tags="Kitchens Houses [[On the road to somewhere]] Baking Mothers [[True stories]]" title="One thought ater another">
+<pre>
+[img[pictures/onethoughtafteranother.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[מחשבה אחר מחשבה]]&gt;&gt;</pre>
 </div>
 <div created="20200308100616070" modified="20200531080315283" tags="[[Iry and Gura]]" title="Opinionated">
 <pre>[img[pictures/daataniyot.jpg]]
