--- a/index.html
+++ b/index.html
@@ -9336,7 +9336,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מחשבה אחר מחשבה]] [[עוגת שוקולד]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מחשבה אחר מחשבה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -16680,13 +16680,12 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Searching for Iry]]&gt;&gt;</pre>
 </div>
-<div created="20211212202434153" modified="20211212204846250" tags="אימהות אפייה בתים מטבחים [[בדרך לאן שהוא]] [[סיפורים אמיתיים]]" title="מחשבה אחר מחשבה">
-<pre>
-[img[pictures/onethoughtafteranother.jpg]]
+<div created="20211212202434153" modified="20211212210126108" tags="אימהות אפייה בתים מטבחים [[בדרך לאן שהוא]] [[סיפורים אמיתיים]]" title="מחשבה אחר מחשבה">
+<pre>[img[pictures/onethoughtafteranother.jpg]]
 
 !!![[אימא של ג'אז]]:
 
-בזמן האחרון ניסיתי שוב ושוב לדמיין את המטבח של סבתא בריינה שלי, שהיה ברחוב ההדרים בפרדס-חנה, עד לרמת הפרטים הקטנים ביותר. אך מאחר שאינני זוכרת הכל, שיניתי את הדקורציה והשארתי את רוח הדברים.
+בזמן האחרון ניסיתי שוב ושוב לדמיין את המטבח של סבתא בריינה שלי, שהיה ברחוב ההדרים בפרדס-חנה.
 
 
 
@@ -18454,8 +18453,7 @@ __אופן ההכנה:__
 &lt;&lt;englink [[Poppy seed chocolate cake]]&gt;&gt;</pre>
 </div>
 <div created="20211212200845263" modified="20211212204412371" tags="מתכונים אפייה [[חיות אוכל]] ארוחות" title="עוגת שוקולד">
-<pre>
-[img[pictures/chocolatecake.jpg]]
+<pre>[img[pictures/chocolatecake.jpg]]
 
 
 !!![[אימא של ג'אז]]:
