--- a/index.html
+++ b/index.html
@@ -299,6 +299,8 @@ Error message and password prompt
 
 <li>אדית</li>
 
+<li>אדמה</li>
+
 <li>אהבה</li>
 
 <li>אהל היפה</li>
@@ -9336,7 +9338,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מחשבה אחר מחשבה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="אדמה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9830,6 +9832,20 @@ Sunny one so true, I love you.//
 &lt;&lt;englink [[Edith]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20211218130636124" modified="20211218132300867" tags="[[כאן בגטו]] [[בדרך לאן שהוא]] [[חיות אוכל]]" title="אדמה">
+<pre>
+[img[pictures/adama.jpg]]
+
+!!![[תומר]]:
+
+יהיה קשה עכשיו ממש להוציא אותי מהגטו האהוב ממילא, אחרי שחלום התגשם, ונפתחה במרחק ירידה מהבניין פלוס כמה צעדים [[אדמה|https://adama-v-o.co.il/%D7%94%D7%97%D7%A0%D7%95%D7%AA-%D7%A9%D7%9C%D7%A0%D7%95/]], ובה  פירות וירקות טעימים במיוחד.
+
+
+
+
+
+&lt;&lt;englink [[Adama]]&gt;&gt;</pre>
 </div>
 <div created="20170112164936113" modified="20200330161654933" tags="[[המטבח על פי ז'נבייב]] מטבחים [[כפות ידיים]]" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
@@ -10809,7 +10825,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20211212203127295" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20211218131128043" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
