--- a/english.html
+++ b/english.html
@@ -277,6 +277,8 @@ Error message and password prompt
 
 <li>Acram Hummus</li>
 
+<li>Adama</li>
+
 <li>Alan Ball</li>
 
 <li>Alexander Technique</li>
@@ -9248,7 +9250,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[One thought ater another]] [[Chocolate cake]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9638,6 +9640,13 @@ Going down from Rothschild, at [[59 Sheinkin St|https://www.google.co.il/maps/uv
  &lt;&lt;heblink [[אכרם חומוס]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20211218130725499" modified="20211218131240674" tags="[[Here in the Ghetto]] [[Food addicts]] [[On the road to somewhere]]" title="Adama">
+<pre>
+[img[pictures/adama.jpg]]
+
+
+ &lt;&lt;heblink [[אדמה]]&gt;&gt;</pre>
 </div>
 <div created="20191113140946887" modified="20200324165434209" tags="[[outer sisters]] films tv [[tv series]] [[Hunky Dory]]" title="Alan Ball">
 <pre>[img[pictures/alan-ball.jpg]]
@@ -10636,8 +10645,7 @@ Children and their rights are the most important, and who and what they'll be sh
 </pre>
 </div>
 <div created="20211212201029883" modified="20211212201159293" tags="Baking [[Food addicts]] Recipes" title="Chocolate cake">
-<pre>
-[img[pictures/chocolatecake.jpg]]
+<pre>[img[pictures/chocolatecake.jpg]]
 
 
 
@@ -11570,7 +11578,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20211212203032271" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20211218131207872" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -14043,8 +14051,7 @@ It seemed like, everything is fine''
 </pre>
 </div>
 <div created="20211212202829463" modified="20211212203057109" tags="Kitchens Houses [[On the road to somewhere]] Baking Mothers [[True stories]]" title="One thought ater another">
-<pre>
-[img[pictures/onethoughtafteranother.jpg]]
+<pre>[img[pictures/onethoughtafteranother.jpg]]
 
 
 
