--- a/index.html
+++ b/index.html
@@ -9338,7 +9338,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="אדמה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עוגיות קינמון]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9358,7 +9358,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20211117150802271" title="$:/temp/search">
+<div created="20161023184814872" modified="20211219190655905" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -18176,7 +18176,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Caraway cookies]]&gt;&gt;</pre>
 </div>
-<div created="20201004124356397" modified="20201004185224810" tags="מתכונים אפייה [[כשהם ישנים]] [[הלכות קורונה]]" title="עוגיות קינמון">
+<div created="20201004124356397" modified="20211219190650649" tags="מתכונים אפייה [[כשהם ישנים]] [[הלכות קורונה]]" title="עוגיות קינמון">
 <pre>[img[pictures/cinnamoncookies.jpg]]
 
 !!![[אווה|אווה כהן]]:
@@ -18185,15 +18185,18 @@ We rise to play a greater part.
 
 החומרים:
 
-200 גרם חמאה קרה חתוכה לקוביות
-8 כפות סוכר
-2 חלמונים
-2 כפיות אבקת קינמון
-2 כוסות ו-1/2 קמח
-1/2 כפית אבקת אפיה
+*200 גרם חמאה קרה חתוכה לקוביות
+*8 כפות סוכר
+*2 חלמונים
+*2 כפיות אבקת קינמון
+*2 כוסות ו-1/4 קמח
+*1/2 כפית אבקת אפיה
  
 
-לפיזור: 1/2 כוס סוכר עם 1/2 כוס קינמון
+לפיזור לפני האפייה:
+
+ *1/2 כוס סוכר
+* 1/2 כוס קינמון
 
 אופן ההכנה:
 
