--- a/index.html
+++ b/index.html
@@ -18176,7 +18176,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Caraway cookies]]&gt;&gt;</pre>
 </div>
-<div created="20201004124356397" modified="20211219190650649" tags="מתכונים אפייה [[כשהם ישנים]] [[הלכות קורונה]]" title="עוגיות קינמון">
+<div created="20201004124356397" modified="20211219204651640" tags="מתכונים אפייה [[כשהם ישנים]] [[הלכות קורונה]]" title="עוגיות קינמון">
 <pre>[img[pictures/cinnamoncookies.jpg]]
 
 !!![[אווה|אווה כהן]]:
@@ -18195,8 +18195,8 @@ We rise to play a greater part.
 
 לפיזור לפני האפייה:
 
- *1/2 כוס סוכר
-* 1/2 כוס קינמון
+ *3 כפות סוכר
+* 3 כפות קינמון
 
 אופן ההכנה:
 
