--- a/english.html
+++ b/english.html
@@ -887,6 +887,8 @@ Error message and password prompt
 
 <li>Neta</li>
 
+<li>New order</li>
+
 <li>Non-hunky-dory</li>
 
 <li>Northern Exposure</li>
@@ -9250,7 +9252,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[New order]] Adama [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11578,7 +11580,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20211218131207872" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20211220211517814" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -13919,6 +13921,14 @@ She's at our place now and she's charming and she told us about [[Lily]].
 
  &lt;&lt;heblink [[נטע]]&gt;&gt;
 </pre>
+</div>
+<div created="20211220211410448" modified="20211220211538162" tags="Houses [[On the road to somewhere]] Films" title="New order">
+<pre>
+[img[pictures/neworder.jpg]]
+
+
+
+ &lt;&lt;heblink [[סדר חדש]]&gt;&gt;</pre>
 </div>
 <div created="20200322154536842" modified="20200324171617621" tags="[[Menopause sisters]] [[Hunky Dory]] [[Coen sister]]" title="Non-hunky-dory">
 <pre>[img[pictures/lo-hevremaniyot.jpg]]
