--- a/index.html
+++ b/index.html
@@ -1187,6 +1187,8 @@ Error message and password prompt
 
 <li>סגירים</li>
 
+<li>סדר חדש</li>
+
 <li>סדרות</li>
 
 <li>סולטנה</li>
@@ -9338,7 +9340,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עוגיות קינמון]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[סדר חדש]] [[עוגיות קינמון]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10825,7 +10827,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20211218131128043" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20211220211617217" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -17684,6 +17686,17 @@ We rise to play a greater part.
 
 
 &lt;&lt;englink [[Closers]]&gt;&gt;</pre>
+</div>
+<div created="20211220211152788" modified="20211220212057842" tags="[[בדרך לאן שהוא]] סרטים בתים" title="סדר חדש">
+<pre>
+[img[pictures/neworder.jpg]]
+
+!!![[יויו]]:
+
+אני אוהב שהדברים גדולים ממני, בעיקר ברגעים בהם [[רוח חדשה|https://www.youtube.com/watch?v=KpeZmEC-16w]] ממלאה אותי, ויש בי כח, ואני עושה דברים ומחייך. 
+
+
+&lt;&lt;englink [[New order]]&gt;&gt;</pre>
 </div>
 <div created="20170711173812724" modified="20200405110254891" tags="טלוויזיה סגירים [[הלכות קורונה]]" title="סדרות">
 <pre>[img[pictures/sdarot.jpg]]
