--- a/index.html
+++ b/index.html
@@ -9340,7 +9340,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[סדר חדש]] [[עוגיות קינמון]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[סדר חדש]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9836,8 +9836,7 @@ Sunny one so true, I love you.//
 </pre>
 </div>
 <div created="20211218130636124" modified="20211218133825201" tags="[[כאן בגטו]] [[בדרך לאן שהוא]] [[חיות אוכל]]" title="אדמה">
-<pre>
-[img[pictures/adama.jpg]]
+<pre>[img[pictures/adama.jpg]]
 
 !!![[תומר]]:
 
@@ -17687,13 +17686,12 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Closers]]&gt;&gt;</pre>
 </div>
-<div created="20211220211152788" modified="20211220212057842" tags="[[בדרך לאן שהוא]] סרטים בתים" title="סדר חדש">
-<pre>
-[img[pictures/neworder.jpg]]
+<div created="20211220211152788" modified="20211220212613789" tags="[[בדרך לאן שהוא]] סרטים בתים" title="סדר חדש">
+<pre>[img[pictures/neworder.jpg]]
 
 !!![[יויו]]:
 
-אני אוהב שהדברים גדולים ממני, בעיקר ברגעים בהם [[רוח חדשה|https://www.youtube.com/watch?v=KpeZmEC-16w]] ממלאה אותי, ויש בי כח, ואני עושה דברים ומחייך. 
+אני אוהב שהדברים גדולים ממני, בעיקר בזמנים בהם [[רוח חדשה|https://www.youtube.com/watch?v=KpeZmEC-16w]] ממלאה אותי, ויש בי כח, ואני עושה דברים ומחייך. 
 
 
 &lt;&lt;englink [[New order]]&gt;&gt;</pre>
