another frame from

--- a/english.html
+++ b/english.html
@@ -297,6 +297,8 @@ Error message and password prompt
 
 <li>Anna</li>
 
+<li>Another frame from Synecdoche New York</li>
+
 <li>Apple crust</li>
 
 <li>Ariella's path</li>
@@ -9252,7 +9254,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[New order]] Adama [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[New order]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9644,8 +9646,7 @@ Going down from Rothschild, at [[59 Sheinkin St|https://www.google.co.il/maps/uv
 </pre>
 </div>
 <div created="20211218130725499" modified="20211218131240674" tags="[[Here in the Ghetto]] [[Food addicts]] [[On the road to somewhere]]" title="Adama">
-<pre>
-[img[pictures/adama.jpg]]
+<pre>[img[pictures/adama.jpg]]
 
 
  &lt;&lt;heblink [[אדמה]]&gt;&gt;</pre>
@@ -9760,6 +9761,14 @@ She creates cosmetic medical products from natural materials. She produces the m
 
 
  &lt;&lt;heblink [[אנה]]&gt;&gt;</pre>
+</div>
+<div created="20211226171240168" modified="20211226171810646" tags="Films Kitchens Houses" title="Another frame from Synecdoche New York">
+<pre>
+
+[img[pictures/anotherframefrom.jpg]]
+
+
+ &lt;&lt;heblink [[עוד פריים מסינקדוכה ניו יורק]]&gt;&gt;</pre>
 </div>
 <div created="20200307165831085" modified="20200901072435311" tags="Baking Recipes [[The team]] [[Food addicts]]" title="Apple crust">
 <pre>[img[pictures/apple-crust.jpg]]
@@ -11580,7 +11589,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
  &lt;&lt;heblink [[עוגות תאנים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200212161010633" modified="20211220211517814" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
+<div created="20200212161010633" modified="20211226171746874" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]] [[Corona beings]] Closers" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -13923,8 +13932,7 @@ She's at our place now and she's charming and she told us about [[Lily]].
 </pre>
 </div>
 <div created="20211220211410448" modified="20211220211538162" tags="Houses [[On the road to somewhere]] Films" title="New order">
-<pre>
-[img[pictures/neworder.jpg]]
+<pre>[img[pictures/neworder.jpg]]
 
 
 
