--- a/index.html
+++ b/index.html
@@ -1255,6 +1255,8 @@ Error message and password prompt
 
 <li>עוגת שזיפים</li>
 
+<li>עוד פריים מסינקדוכה ניו יורק</li>
+
 <li>עורכת הדין</li>
 
 <li>עושים שלום</li>
@@ -9331,7 +9333,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20210430202203122" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20211212202818770" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20211226172541060" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9340,7 +9342,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[סדר חדש]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עוד פריים מסינקדוכה ניו יורק]] [[סדר חדש]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9360,7 +9362,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20211219190655905" title="$:/temp/search">
+<div created="20161023184814872" modified="20211226172405280" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10826,7 +10828,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20211220211617217" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20211226171554726" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -18563,6 +18565,17 @@ __אופן ההכנה:__
 
 
 &lt;&lt;englink [[Plum cake]]&gt;&gt;</pre>
+</div>
+<div created="20211226171000544" modified="20211226172608470" tags="בתים מטבחים סרטים" title="עוד פריים מסינקדוכה ניו יורק">
+<pre>
+[img[pictures/anotherframefrom.jpg]]
+
+
+&lt;&lt;englink [[Another frame from Synecdoche New York]]&gt;&gt;
+
+!!![[גורה]]:
+
+סרט כל כך יפה בכל מובן. השתמשתי בתמונות מתוכו גם [[במטא בדיון|מטא בדיון]], וגם [[בסדר חדש|סדר חדש]]</pre>
 </div>
 <div created="20170319172108447" modified="20200716203605137" tags="HH" title="עורכת הדין">
 <pre>[img[pictures/thelawyer.jpg]]
