--- a/index.html
+++ b/index.html
@@ -10828,7 +10828,7 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[Asparagus]]&gt;&gt;</pre>
 </div>
-<div created="20171216194951924" modified="20211226171554726" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
+<div created="20171216194951924" modified="20211226175102902" tags="[[כשהם ישנים]] [[חיות אוכל]] [[הנחלה בה גדלתי]] [[כפות ידיים]]" title="אפייה">
 <pre>[img[pictures/afiya.jpg]]
 
 [[אווה|אווה כהן]]:
@@ -18566,16 +18566,19 @@ __אופן ההכנה:__
 
 &lt;&lt;englink [[Plum cake]]&gt;&gt;</pre>
 </div>
-<div created="20211226171000544" modified="20211226172608470" tags="בתים מטבחים סרטים" title="עוד פריים מסינקדוכה ניו יורק">
+<div created="20211226171000544" modified="20211226175128461" tags="בתים מטבחים סרטים" title="עוד פריים מסינקדוכה ניו יורק">
 <pre>
 [img[pictures/anotherframefrom.jpg]]
 
 
-&lt;&lt;englink [[Another frame from Synecdoche New York]]&gt;&gt;
 
 !!![[גורה]]:
 
-סרט כל כך יפה בכל מובן. השתמשתי בתמונות מתוכו גם [[במטא בדיון|מטא בדיון]], וגם [[בסדר חדש|סדר חדש]]</pre>
+סרט כל כך יפה בכל מובן. השתמשתי בתמונות מתוכו גם [[במטא בדיון|מטא בדיון]], וגם [[בסדר חדש|סדר חדש]]
+
+
+
+&lt;&lt;englink [[Another frame from Synecdoche New York]]&gt;&gt;</pre>
 </div>
 <div created="20170319172108447" modified="20200716203605137" tags="HH" title="עורכת הדין">
 <pre>[img[pictures/thelawyer.jpg]]
