--- a/index.html
+++ b/index.html
@@ -16202,7 +16202,7 @@ We rise to play a greater part.
 &lt;&lt;englink [[what does a thing assemble]]&gt;&gt;
 </pre>
 </div>
-<div created="20220102115252566" modified="20220102123206097" tags="[[כאן בגטו]] בתים [[בדרך לאן שהוא]]" title="למטה">
+<div created="20220102115252566" modified="20220102130138900" tags="[[כאן בגטו]] בתים [[בדרך לאן שהוא]] חלונות" title="למטה">
 <pre>
 [img[pictures/downthere.jpg]]
 
