--- a/index.html
+++ b/index.html
@@ -9368,8 +9368,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20220127190338850" title="$:/temp/search">
-<pre>עוגת שוקו</pre>
+<div created="20161023184814872" modified="20220128075439462" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -18527,7 +18527,7 @@ __אופן ההכנה:__
 
 &lt;&lt;englink [[Poppy seed chocolate cake]]&gt;&gt;</pre>
 </div>
-<div created="20211212200845263" modified="20220127190417073" tags="מתכונים אפייה [[חיות אוכל]] ארוחות" title="עוגת שוקולד">
+<div created="20211212200845263" modified="20220128075536477" tags="מתכונים אפייה [[חיות אוכל]] ארוחות" title="עוגת שוקולד">
 <pre>[img[pictures/chocolatecake.jpg]]
 
 
@@ -18548,6 +18548,9 @@ __אופן ההכנה:__
 *כפית אבקת אפייה
 
 החומרים לקרם:
+
+200 גרם שוקולד
+מיכל שמנת מתוקה
 
 אופן ההכנה:
 
