--- a/index.html
+++ b/index.html
@@ -18527,7 +18527,7 @@ __אופן ההכנה:__
 
 &lt;&lt;englink [[Poppy seed chocolate cake]]&gt;&gt;</pre>
 </div>
-<div created="20211212200845263" modified="20220128075536477" tags="מתכונים אפייה [[חיות אוכל]] ארוחות" title="עוגת שוקולד">
+<div created="20211212200845263" modified="20220204160611808" tags="מתכונים אפייה [[חיות אוכל]] ארוחות" title="עוגת שוקולד">
 <pre>[img[pictures/chocolatecake.jpg]]
 
 
@@ -18549,12 +18549,13 @@ __אופן ההכנה:__
 
 החומרים לקרם:
 
-200 גרם שוקולד
-מיכל שמנת מתוקה
+* 200 גרם שוקולד
+* מיכל שמנת מתוקה
 
 אופן ההכנה:
 
 1. ממיסים בסיר קטן את החמאה, השוקולד המריר, הקקאו והחלב תוך בחישה עד לקרם חלק, אליו מוסיפים את הרום/קוניאק/ויסקי. (אפשר להמיס  גם במיקרו)
+
  
 2. מקציפים את הביצים במערבל חשמלי ומוסיפים בהדרגה את הסוכר, ממשיכים לערבל במהירות גבוהה עד לקבלת תערובת תפוחה ובהירה.
 
@@ -18562,11 +18563,11 @@ __אופן ההכנה:__
 
 4.  מוזגים לתבנית מלבנית (30 על 25 למשל), או תבנית עגולה בקוטר 26. 
 
-5. מכניסים את העוגה למרכז התנור שחומם מראש ל165-170  מעלות צלזיוס , ואופים כשעה או עד שקיסם הננעץ במרכז העוגה יוצא יבש. 
+5. מכניסים את העוגה למרכז התנור שחומם מראש ל165-170  מעלות צלזיוס , ואופים 50-600 דקות או עד שקיסם הננעץ במרכז העוגה יוצא יבש. 
 
-6. מכינים את הגאנאש - ממיסים את השמנת והשוקולד עד לתערובת אחידה ומבריקה.
+6. שהוגה בתנור מכינים את הגאנאש - ממיסים את השמנת והשוקולד עד לתערובת אחידה ומבריקה.
 
-7. כשהעוגה יוצאת מן התנור מוזגים עליה בעדינות ומובה נמוך את הקרם, לו נותנים לחלחל פנימה עד שהעוגה מגיעה לטמפרטורת החדר.
+7. כשהעוגה יוצאת מן התנור מוזגים עליה בעדינות ומגובה נמוך את הקרם, ונותנים לו לחלחל פנימה עד שהעוגה מגיעה לטמפרטורת החדר.
 
 
 
